<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout style="@style/UserInputs">

            <EditText
                android:id="@+id/length"
                style="@style/EditTexts"
                android:hint="@string/hint_length" />

            <TextView style="@style/RedBox" />

        </LinearLayout>

        <LinearLayout style="@style/UserInputs">

            <EditText
                android:id="@+id/breadth"
                style="@style/EditTexts"
                android:hint="@string/hint_breath" />

            <TextView style="@style/RedBox" />

        </LinearLayout>

        <LinearLayout style="@style/UserInputs">

            <EditText
                android:id="@+id/height"
                style="@style/EditTexts"
                android:hint="@string/hint_height" />

            <TextView style="@style/RedBox" />

        </LinearLayout>

        <LinearLayout style="@style/UserInputs">

            <EditText
                android:id="@+id/weight"
                style="@style/EditTexts"
                android:hint="@string/hint_weight" />

            <TextView
                style="@style/RedBox"
                android:text="@string/kg" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp">

            <Button
                android:id="@+id/submit"
                style="@style/Buttons"
                android:text="@string/submit"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/goToReport"
                style="@style/Buttons"
                android:text="@string/go_to_report"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/goToWebsite"
                style="@style/Buttons"
                android:text="@string/go_to_website"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>